--- a/indexx.html
+++ b/indexx.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,6 +8,6 @@
 </head>
 <body>
   <p>This is the background generator</p>
-  
+  <p>check this stuff out im killing it </p>
 </body>
 </html>
